Fix image jumping (#3570)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -2355,11 +2355,11 @@ hr {
   flex-grow: 1;
   margin-bottom: 0;
   max-width: 100%;
-  max-height: 350px;
+  max-height: 345px;
   width: auto;
   flex: 1;
   align-content: center;
-  margin-top: 0.3rem;
+  margin-top: 5px;
 }
 
 // innter tabs content END
